<package>
  <name>meka_omnibase_control</name>
  <version>1.9.9</version>
  <description>M3 is an open-source real-time control software provided by Meka Robotics LLC to control the Meka robots. 
This package contains the core of the m3 system, i.e. a realtime server and basic components that all the Meka robot components inherit from</description>
  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>
  <author email="edsinger@mekabot.com">Aaron Edsinger</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>m3core</build_depend>
  <build_depend>m3meka</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libprotobuf-dev</build_depend>
  <build_depend>libncurses5-dev</build_depend>

  <run_depend>m3core</run_depend>
  <run_depend>m3meka</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libprotobuf-dev</run_depend>
  <run_depend>libncurses5-dev</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>

